Fixed bug in PaxExam configuration: removed '-D' from systemProperty() calls
git-svn-id: https://scm.ops4j.org/repos/ops4j/projects/pax/useradmin@16237 9b982a3c-3ae5-0310-a4bc-d9a3335569bd